Change utils directory

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -6,7 +6,6 @@
     <title>Weather</title>
     <link rel="icon" href="/img/weather.png">
     <link rel="stylesheet" href="/css/styles.css">
-    <script src="/js/app.js"></script>
 </head>
 
 <body>
@@ -15,13 +14,14 @@
 
         <p>Use this site to get your weather!</p>
 
-        <form action="">
+        <form>
             <input placeholder="Location">
             <button>Search</button>
         </form>
     </div>
 
     {{>footer}}
+    <script src="/js/app.js"></script>
 </body>
 
 </html>
