Adding about and index

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,6 +10,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>Created by Rod Angle.  Using data from mapbox.com and WeatherStack.com</p>
         <img class="portrait" src="/img/personalImage.jpg">
     </div>
     
