--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -18,6 +18,8 @@
             <input placeholder="Location">
             <button>Search</button>
         </form>
+        <div id="message-1"></div>
+        <div id="message-2"></div>
     </div>
 
     {{>footer}}
